--- a/subpages/help.html
+++ b/subpages/help.html
@@ -1,5 +1,5 @@
 <!-- currently working on -->
 
 <head>
-  <meta http-equiv='refresh' content='0; URL=index.html'>
+  <meta http-equiv='refresh' content='0; URL=../index.php'>
 </head>
