--- a/subpages/help.html
+++ b/subpages/help.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- favicon (32x32) -->
-    <link rel="icon" href="../assets/img/favicon.ico" />
+    <link rel="icon" href="../assets/img/feedo.png" />
 
     <!-- stylesheets (CSS) -->
     <!-- custom -->
@@ -31,7 +31,7 @@
                     <p class="invisible">to be added soon (language change)</p>
                 </div>
                 <div class="col-md-4 icon-help">
-                    <img data-aos="zoom-in" class="icon invisible" src="../assets/img/logo.png" alt="Feedo Logo">
+                    <img data-aos="zoom-in" class="icon invisible" src="../assets/img/feedo.png" alt="Feedo Logo">
                 </div>
                 <div class="col-md-4 backtomain">
                     <a data-aos="flip-right" data-aos-duration="500" href="../index.php"><img class="x-icon" src="../assets/img/x.png" alt="close help"></a>
@@ -41,7 +41,7 @@
         <div class="help-body container">
             <div class="row">
                 <div class="col-md-12 icon-help">
-                    <img data-aos="zoom-in" class="icon" src="../assets/img/logo.png" alt="Feedo Logo">
+                    <img data-aos="zoom-in" class="icon icon-help" src="../assets/img/feedo.png" alt="Feedo Logo">
                 </div>
             </div>
             <div class="row">
