--- a/subpages/help.html
+++ b/subpages/help.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- favicon (32x32) -->
+    <!-- favicon -->
     <link rel="icon" href="../assets/img/feedo.png" />
 
     <!-- stylesheets (CSS) -->
@@ -14,7 +15,8 @@
     <!-- animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <!-- javascript (custom) -->
     <script src="../assets/js/main.js"> </script>
@@ -27,14 +29,10 @@
     <section class="help">
         <div class="help-header container-fluid">
             <div class="row">
-                <div class="col-md-4">
-                    <p class="invisible">to be added soon (language change)</p>
-                </div>
-                <div class="col-md-4 icon-help">
-                    <img data-aos="zoom-in" class="icon invisible" src="../assets/img/feedo.png" alt="Feedo Logo">
-                </div>
                 <div class="col-md-4 backtomain">
-                    <a data-aos="flip-right" data-aos-duration="500" href="../index.php"><img class="x-icon" src="../assets/img/x.png" alt="close help"></a>
+                    <a data-aos="flip-right" data-aos-duration="500" href="../index.php">
+                        <img class="x-icon" src="../assets/img/x.png" alt="close help"></img>
+                    </a>
                 </div>
             </div>
         </div>
@@ -46,11 +44,10 @@
             </div>
             <div class="row">
                 <div data-aos="zoom-out" data-aos-duration="500" class="col-md-12 help-text">
-                    <h1>Hey! We are glad, that you found our site!</h1>
-                    <h2>Feedo is a free Website where you can join and create anonymous surveys <br /> without having to register. <br />
-                        Just type in your code on the main page or create your own survey.<br />
-                        Your data will be fully encrypted and deleted after 8 days.</h2> 
-                    <h3>created by nero & revays (in cooperation with itobizz)</h3> <!-- ÄNDERN!!!-->
+                    <h1>Welcome to Feedo!</h1>
+                    <h2>Here you can join and create anonymous surveys <br> without having to register. <br>
+                        Your data will be deleted after 8 days.</h2>
+                    <h3>made to get precise and honest feedback!</h3>
                 </div>
             </div>
         </div>
@@ -65,7 +62,9 @@
 
     <!-- Javascript -->
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"> </script>
 
     <!-- AOS (animation) -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
