--- a/subpages/help.html
+++ b/subpages/help.html
@@ -15,17 +15,16 @@
     <!-- animation -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 
     <!-- javascript (custom) -->
-    <script src="../assets/js/main.js"> </script>
+    <script src="../assets/js/main.js">
+    </script>
 
     <title>Feedo!</title>
 </head>
 
 <body>
-    <!-- Code section-->
     <section class="help">
         <div class="help-header container-fluid">
             <div class="row">
@@ -45,8 +44,7 @@
             <div class="row">
                 <div data-aos="zoom-out" data-aos-duration="500" class="col-md-12 help-text">
                     <h1>Welcome to Feedo!</h1>
-                    <h2>Here you can join and create anonymous surveys <br> without having to register. <br>
-                        Your data will be deleted after 8 days.</h2>
+                    <h2>Here you can join and create anonymous surveys <br> without having to register. <br> Your data will be deleted after 8 days.</h2>
                     <h3>made to get precise and honest feedback!</h3>
                 </div>
             </div>
@@ -62,9 +60,8 @@
 
     <!-- Javascript -->
     <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
 
     <!-- AOS (animation) -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
