--- a/subpages/help.html
+++ b/subpages/help.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/40327c7301.js" crossorigin="anonymous"></script>
 
     <!-- javascript (custom) -->
     <script src="../assets/js/main.js">
