--- a/subpages/help.html
+++ b/subpages/help.html
@@ -34,8 +34,8 @@
 <body>
     <section class="help">
         <div class="help-header container-fluid">
-            <div class="row">
-                <div class="col-md-4 backtomain">
+            <div class="row help-header-row">
+                <div class="col-md-4 help-header-col">
                     <a data-aos="flip-right" data-aos-duration="500" href="../index.php">
                         <img class="x-icon" src="../assets/img/x.png" alt="close help"></img>
                     </a>
@@ -45,7 +45,7 @@
         <div class="help-body container">
             <div class="row">
                 <div class="col-md-12 icon-help">
-                    <img data-aos="zoom-in" class="icon icon-help" src="../assets/img/feedo.png" alt="Feedo Logo">
+                    <img data-aos="zoom-in" class="icon" src="../assets/img/feedologo2.png" alt="Feedo Logo">
                 </div>
             </div>
             <div class="row">
