--- a/subpages/help.html
+++ b/subpages/help.html
@@ -42,10 +42,10 @@
                 </div>
             </div>
         </div>
-        <div class="help-body container">
+        <div class="help-body container-fluid">
             <div class="row">
                 <div class="col-md-12 icon-help">
-                    <img data-aos="zoom-in" class="icon" src="../assets/img/feedologo2.png" alt="Feedo Logo">
+                    <img data-aos="zoom-in" class="icon icon-help" src="../assets/img/feedologo2.png" alt="Feedo Logo">
                 </div>
             </div>
             <div class="row">
@@ -57,14 +57,13 @@
                 </div>
             </div>
         </div>
+        <footer class="help-footer">
+            <script>
+                document.write(date());
+            </script>
+        </footer>
     </section>
 
-    <!-- footer-->
-    <footer class="help-footer">
-        <script>
-            document.write(date());
-        </script>
-    </footer>
 
     <!-- Javascript -->
     <!-- Bootstrap Bundle with Popper -->
@@ -77,6 +76,32 @@
     <script>
         AOS.init();
     </script>
+    <script>
+        var themebtn = document.getElementById("themebtn");
+
+        var themebtn = document.getElementById("themebtn");
+
+        if(localStorage.getItem("theme") == null) {
+            localStorage.setItem("theme", "light");
+        }
+
+        let localData = localStorage.getItem("theme");
+
+        if(localData == "light") {
+            document.body.classList.remove("dark-theme");
+        } else if(localData == "dark-theme") {
+            document.body.classList.add("dark-theme");
+        }
+
+        function changeTheme(){
+            document.body.classList.toggle("dark-theme");
+            if(document.body.classList.contains("dark-theme")){
+                localStorage.setItem("theme", "dark-theme");
+            } else {
+                localStorage.setItem("theme", "light");
+            }
+        }
+  </script>
 
 </body>
 
