--- a/subpages/help.html
+++ b/subpages/help.html
@@ -79,8 +79,6 @@
     <script>
         var themebtn = document.getElementById("themebtn");
 
-        var themebtn = document.getElementById("themebtn");
-
         if(localStorage.getItem("theme") == null) {
             localStorage.setItem("theme", "light");
         }
@@ -89,16 +87,22 @@
 
         if(localData == "light") {
             document.body.classList.remove("dark-theme");
+            document.getElementById("theme-icon").classList.add("fa-moon");
         } else if(localData == "dark-theme") {
             document.body.classList.add("dark-theme");
+            document.getElementById("theme-icon").classList.add("fa-sun");
         }
 
         function changeTheme(){
             document.body.classList.toggle("dark-theme");
             if(document.body.classList.contains("dark-theme")){
                 localStorage.setItem("theme", "dark-theme");
+                document.getElementById("theme-icon").classList.remove("fa-moon");
+                document.getElementById("theme-icon").classList.add("fa-sun");
             } else {
                 localStorage.setItem("theme", "light");
+                document.getElementById("theme-icon").classList.remove("fa-sun");
+                document.getElementById("theme-icon").classList.add("fa-moon");
             }
         }
   </script>
