--- a/subpages/help.html
+++ b/subpages/help.html
@@ -75,37 +75,13 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
-    </script>
-    <script>
-        var themebtn = document.getElementById("themebtn");
-
-        if(localStorage.getItem("theme") == null) {
-            localStorage.setItem("theme", "light");
-        }
-
-        let localData = localStorage.getItem("theme");
-
-        if(localData == "light") {
-            document.body.classList.remove("dark-theme");
-            document.getElementById("theme-icon").classList.add("fa-moon");
-        } else if(localData == "dark-theme") {
-            document.body.classList.add("dark-theme");
-            document.getElementById("theme-icon").classList.add("fa-sun");
-        }
-
-        function changeTheme(){
-            document.body.classList.toggle("dark-theme");
-            if(document.body.classList.contains("dark-theme")){
-                localStorage.setItem("theme", "dark-theme");
-                document.getElementById("theme-icon").classList.remove("fa-moon");
-                document.getElementById("theme-icon").classList.add("fa-sun");
-            } else {
-                localStorage.setItem("theme", "light");
-                document.getElementById("theme-icon").classList.remove("fa-sun");
-                document.getElementById("theme-icon").classList.add("fa-moon");
+        themeSetter(document.body.classList);
+        document.onkeydown = function goBack(i) {
+            if (window.event.keyCode == 27) {
+                window.location.href = "../index.php";
             }
         }
-  </script>
+    </script>
 
 </body>
 
