--- a/subpages/help.html
+++ b/subpages/help.html
@@ -75,12 +75,12 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
-        themeSetter(document.body.classList);
-        document.onkeydown = function goBack(i) {
+        document.onkeydown = function goBack() {
             if (window.event.keyCode == 27) {
                 window.location.href = "../index.php";
             }
         }
+        themeSetter(document.body.classList);
     </script>
 
 </body>
