--- a/subpages/help.html
+++ b/subpages/help.html
@@ -9,6 +9,7 @@
     <!-- custom meta tags -->
     <meta name="description" content="Feedo is a Feedback-System for students!" />
     <meta name="keywords" content="feedo, students, feedback-system" />
+    <meta name="theme-color" content="#2891d7">
 
     <!-- favicon -->
     <link rel="icon" href="../assets/img/feedo.png" />
